Added new, refreshed beta version of the old wk1 Phone App

--- a/wk1/keypadSchool/app/src/main/res/values/strings.xml
+++ b/wk1/keypadSchool/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Keypad_Lab_Wk1</string>
+    <string name="app_name">Phone App</string>
+    <string name="dialBtn">Open Dialer</string>
 </resources>
