--- a/wk1/PhoneApp/app/src/main/res/values/strings.xml
+++ b/wk1/PhoneApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Phone App</string>
     <string name="dialButton">Open Dialer</string>
+    <string name="broserButton">Browser</string>
+    <string name="addressField">Your URL here...</string>
 </resources>
